--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -2,56 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_stars(stars):\n",
+    "    stars = stars.split(', \\'')\n",
+    "    stars = [star for star in stars if star != '' and star != '    Stars:\\'']\n",
+    "    stars[0] = stars[0][2:]\n",
+    "    stars[-1] = stars[-1][:-2]\n",
+    "\n",
+    "    dir_index = -1\n",
+    "    for j in range(len(stars)):\n",
+    "        stars[j] = stars[j].replace(', \"', '')\n",
+    "        if 'Stars:\\'' in stars[j]:\n",
+    "            stars[j] = stars[j].split(':\\'')[1]\n",
+    "        \n",
+    "        if '|' in stars[j]:\n",
+    "            dir_index = j\n",
+    "    \n",
+    "    stars = stars[dir_index + 1:]\n",
+    "\n",
+    "    return stars\n",
+    "\n",
+    "def format_genres(genre):\n",
+    "    return genre.split(', ')\n",
+    "\n",
+    "def format_years(year):\n",
+    "    if len(year) < 5 or year[1] not in ['1', '2']:\n",
+    "        return -1\n",
+    "    return int(year[1:5])\n",
+    "\n",
+    "def set_is_tv(certificate):\n",
+    "    tv_certs = ['TV-Y', 'TV-Y7', 'TV-Y7-FV','TV-G','TV-PG','TV-14', 'TV-MA']\n",
+    "\n",
+    "    if certificate in tv_certs:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def get_cleaned_dataframe():\n",
+    "    df = pd.read_csv('./n_movies.csv')\n",
+    "    df = df.drop(columns=['description', 'votes', 'duration'])\n",
+    "    df = df.dropna(subset=['stars', 'title'])\n",
+    "    df = df.drop_duplicates(subset=['title'])\n",
+    "    df = df.fillna('')\n",
+    "\n",
+    "    df['stars'] = df['stars'].apply(format_stars)\n",
+    "    df['genre'] = df['genre'].apply(format_genres)\n",
+    "    df['year'] = df['year'].apply(format_years)\n",
+    "    df['is_tv'] = df['certificate'].apply(set_is_tv)\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    title         year certificate duration  \\\n",
-      "0               Cobra Kai     (2018– )       TV-14   30 min   \n",
-      "1               The Crown     (2016– )       TV-MA   58 min   \n",
-      "2        Better Call Saul  (2015–2022)       TV-MA   46 min   \n",
-      "3           Devil in Ohio       (2022)       TV-MA  356 min   \n",
-      "4  Cyberpunk: Edgerunners     (2022– )       TV-MA   24 min   \n",
-      "\n",
-      "                          genre  rating  \\\n",
-      "0         Action, Comedy, Drama     8.5   \n",
-      "1     Biography, Drama, History     8.7   \n",
-      "2                  Crime, Drama     8.9   \n",
-      "3        Drama, Horror, Mystery     5.9   \n",
-      "4  Animation, Action, Adventure     8.6   \n",
-      "\n",
-      "                                         description  \\\n",
-      "0  Decades after their 1984 All Valley Karate Tou...   \n",
-      "1  Follows the political rivalries and romance of...   \n",
-      "2  The trials and tribulations of criminal lawyer...   \n",
-      "3  When a psychiatrist shelters a mysterious cult...   \n",
-      "4  A Street Kid trying to survive in a technology...   \n",
-      "\n",
-      "                                               stars    votes  \\\n",
-      "0  ['Ralph Macchio, ', 'William Zabka, ', 'Courtn...  177,031   \n",
-      "1  ['Claire Foy, ', 'Olivia Colman, ', 'Imelda St...  199,885   \n",
-      "2  ['Bob Odenkirk, ', 'Rhea Seehorn, ', 'Jonathan...  501,384   \n",
-      "3  ['Emily Deschanel, ', 'Sam Jaeger, ', 'Gerardo...    9,773   \n",
-      "4  ['Zach Aguilar, ', 'Kenichiro Ohashi, ', 'Emi ...   15,413   \n",
-      "\n",
-      "                                              actors  \n",
-      "0  [Ralph Macchio, William Zabka, Courtney Hengge...  \n",
-      "1  [Claire Foy, Olivia Colman, Imelda Staunton, M...  \n",
-      "2  [Bob Odenkirk, Rhea Seehorn, Jonathan Banks, P...  \n",
-      "3  [Emily Deschanel, Sam Jaeger, Gerardo Celasco,...  \n",
-      "4  [Zach Aguilar, Kenichiro Ohashi, Emi Lo, Aoi Y...  \n"
+      "(7912, 7)\n"
      ]
     }
    ],
    "source": [
-    "import format_data\n",
     "\n",
-    "df = format_data.get_cleaned_dataframe()\n",
-    "\n",
-    "print(df.head())"
+    "df = get_cleaned_dataframe()"
    ]
   },
   {
