--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,9 @@
     "def get_cleaned_dataframe():\n",
     "    df = pd.read_csv('./n_movies.csv')\n",
     "    df = df.drop(columns=['description', 'votes', 'duration'])\n",
-    "    df = df.dropna(subset=['stars', 'title'])\n",
+    "    df = df.dropna(subset=['stars'])\n",
     "    df = df.drop_duplicates(subset=['title'])\n",
+    "    df = df.set_index('title')\n",
     "    df = df.fillna('')\n",
     "\n",
     "    df['stars'] = df['stars'].apply(format_stars)\n",
@@ -67,19 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7912, 7)\n"
+      "(7912, 6)\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "df = get_cleaned_dataframe()"
    ]
   },
