--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "    df = df.drop(columns=['description', 'votes', 'duration'])\n",
     "    df = df.dropna(subset=['stars'])\n",
     "    df = df.drop_duplicates(subset=['title'])\n",
-    "    df = df.set_index('title')\n",
+    "    df = df.reset_index()\n",
     "    df = df.fillna('')\n",
     "\n",
     "    df['stars'] = df['stars'].apply(format_stars)\n",
@@ -68,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(7912, 6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = get_cleaned_dataframe()"
    ]
