--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -104,28 +104,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 2000/2000 [00:00<00:00, 86337.19it/s]\n",
-      "100%|███████████████████████████████████████| 2000/2000 [00:34<00:00, 58.80it/s]\n",
-      "100%|██████████████████████████████████████| 200/200 [00:00<00:00, 49592.72it/s]\n",
-      "100%|████████████████████████████████████████| 200/200 [00:00<00:00, 576.00it/s]\n"
+      "100%|██████████████████████████████████████| 500/500 [00:00<00:00, 39270.30it/s]\n",
+      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 187.22it/s]\n",
+      "100%|█████████████████████████████████████| 500/500 [00:00<00:00, 109192.54it/s]\n",
+      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 191.18it/s]\n",
+      "100%|█████████████████████████████████████| 500/500 [00:00<00:00, 114969.14it/s]\n",
+      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 189.12it/s]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "'\\n# smaller nodes and fonts\\nplt.figure(1, figsize=(15,15))\\nnx.draw_random(movie_network, node_size=50, with_labels=True)\\nplt.figure(2, figsize=(15,15))\\nnx.draw_random(tv_show_network, node_size=50, with_labels=True) \\nplt.show()\\n'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Network' object has no attribute 'degree'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[55], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m tv_show_network \u001b[38;5;241m=\u001b[39m create_network(tv_shows, nt_tv_show, \u001b[38;5;241m500\u001b[39m)\n\u001b[1;32m     39\u001b[0m combine_network \u001b[38;5;241m=\u001b[39m create_network(media, nt_combine, \u001b[38;5;241m500\u001b[39m)\n\u001b[0;32m---> 41\u001b[0m d_movie \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(movie_network\u001b[38;5;241m.\u001b[39mdegree)\n\u001b[1;32m     42\u001b[0m d_movie\u001b[38;5;241m.\u001b[39mupdate((x, scale\u001b[38;5;241m*\u001b[39my) \u001b[38;5;28;01mfor\u001b[39;00m x, y \u001b[38;5;129;01min\u001b[39;00m d_movie\u001b[38;5;241m.\u001b[39mitems())\n\u001b[1;32m     43\u001b[0m d_tv_show \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(tv_show_network\u001b[38;5;241m.\u001b[39mdegree)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Network' object has no attribute 'degree'"
+     ]
     }
    ],
    "source": [
@@ -136,44 +139,67 @@
     "\n",
     "# Network Visualization of Movies with shared actors\n",
     "\n",
-    "# Movie Network\n",
-    "movie_network = nx.MultiGraph()\n",
+    "def create_network(df, network, num_nodes):\n",
+    "    \n",
+    "    for i in tqdm(range(num_nodes)):\n",
+    "        network.add_node(df.loc[i,'title'], value=network)\n",
+    "    \n",
+    "    for i in tqdm(range(num_nodes)):\n",
+    "        for j in range(i + 1, num_nodes):\n",
+    "            w = 0\n",
+    "            for actor in df.loc[i, 'stars']:\n",
+    "                if actor in df.loc[j, 'stars']:\n",
+    "                    w += 5\n",
+    "            if w > 0:\n",
+    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], w=w)\n",
+    "    return network\n",
+    "\n",
+    "movie_network = nx.Graph()\n",
     "tv_show_network = nx.MultiGraph()\n",
+    "combine_network = nx.MultiGraph()\n",
+    "\n",
+    "media = df.dropna().reset_index(drop=True)\n",
     "movies = df.where(df['is_tv'] == False).dropna().reset_index(drop=True)\n",
     "tv_shows = df.where(df['is_tv'] == True).dropna().reset_index(drop=True)\n",
     "\n",
-    "for i in tqdm(range(2000)):\n",
-    "    movie_network.add_node(movies.loc[i,'title'])\n",
+    "# Movie Network\n",
+    "scale=3\n",
+    "movie_network = create_network(movies, nt_movie, 500)\n",
+    "tv_show_network = create_network(tv_shows, nt_tv_show, 500)\n",
+    "combine_network = create_network(media, nt_combine, 500)\n",
     "\n",
-    "for i in tqdm(range(2000)):\n",
-    "    for j in range(i + 1, 2000):\n",
-    "        for actor in movies.loc[i, 'stars']:\n",
-    "            if actor in movies.loc[j, 'stars']:\n",
-    "                movie_network.add_edge(movies.loc[i, 'title'], movies.loc[j, 'title'])\n",
+    "d_movie = dict(movie_network.degree)\n",
+    "d_movie.update((x, scale*y) for x, y in d_movie.items())\n",
+    "d_tv_show = dict(tv_show_network.degree)\n",
+    "d_tv_show.update((x, scale*y) for x, y in d_tv_show.items())\n",
+    "d_combine = dict(combine_network.degree)\n",
+    "d_combine.update((x, scale*y) for x, y in d_combine.items())\n",
     "\n",
+    "#Setting up size attribute\n",
+    "nx.set_node_attributes(movie_network,d_movie,'size')\n",
+    "nx.set_node_attributes(tv_show_network,d_tv_show,'size')\n",
+    "nx.set_node_attributes(combine_network,d_combine,'size')\n",
     "\n",
-    "# TV Show Network\n",
+    "nt_movie = Network(\"500px\", \"500px\")\n",
+    "nt_tv_show = Network(\"800px\", \"800px\")\n",
+    "nt_combine = Network(\"800px\", \"800px\")\n",
     "\n",
-    "for i in tqdm(range(200)):\n",
-    "    tv_show_network.add_node(tv_shows.loc[i,'title'])\n",
+    "nt_movie.from_nx(movie_network)\n",
+    "nt_movie.show_buttons()\n",
+    "nt_tv_show.from_nx(tv_show_network)\n",
+    "nt_combine.from_nx(combine_network)\n",
     "\n",
-    "for i in tqdm(range(200)):\n",
-    "    for j in range(i + 1, 200):\n",
-    "        for actor in tv_shows.loc[i, 'stars']:\n",
-    "            if actor in tv_shows.loc[j, 'stars']:\n",
-    "                tv_show_network.add_edge(tv_shows.loc[i, 'title'], tv_shows.loc[j, 'title'])\n",
-    "nt = Network(\"500px\", \"500px\")\n",
-    "nt.from_nx(movie_network)\n",
-    "nt.show(\"nx.html\")\n",
-    "'''\n",
-    "# smaller nodes and fonts\n",
-    "plt.figure(1, figsize=(15,15))\n",
-    "nx.draw_random(movie_network, node_size=50, with_labels=True)\n",
-    "plt.figure(2, figsize=(15,15))\n",
-    "nx.draw_random(tv_show_network, node_size=50, with_labels=True) \n",
-    "plt.show()\n",
-    "'''"
+    "nt_movie.show(\"nx_movie.html\")\n",
+    "nt_tv_show.show(\"nx_tv_show.html\")\n",
+    "nt_combine.show(\"nx_combine.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
