--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -104,30 +104,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 500/500 [00:00<00:00, 39270.30it/s]\n",
-      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 187.22it/s]\n",
-      "100%|█████████████████████████████████████| 500/500 [00:00<00:00, 109192.54it/s]\n",
-      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 191.18it/s]\n",
-      "100%|█████████████████████████████████████| 500/500 [00:00<00:00, 114969.14it/s]\n",
-      "100%|████████████████████████████████████████| 500/500 [00:02<00:00, 189.12it/s]\n"
+      "100%|██████████████████████████████████████| 500/500 [00:00<00:00, 16502.22it/s]\n",
+      "  0%|                                                   | 0/500 [00:00<?, ?it/s]\n"
      ]
     },
     {
      "ename": "AttributeError",
-     "evalue": "'Network' object has no attribute 'degree'",
+     "evalue": "'Network' object has no attribute 'add_weighted_edges_from'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[55], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m tv_show_network \u001b[38;5;241m=\u001b[39m create_network(tv_shows, nt_tv_show, \u001b[38;5;241m500\u001b[39m)\n\u001b[1;32m     39\u001b[0m combine_network \u001b[38;5;241m=\u001b[39m create_network(media, nt_combine, \u001b[38;5;241m500\u001b[39m)\n\u001b[0;32m---> 41\u001b[0m d_movie \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(movie_network\u001b[38;5;241m.\u001b[39mdegree)\n\u001b[1;32m     42\u001b[0m d_movie\u001b[38;5;241m.\u001b[39mupdate((x, scale\u001b[38;5;241m*\u001b[39my) \u001b[38;5;28;01mfor\u001b[39;00m x, y \u001b[38;5;129;01min\u001b[39;00m d_movie\u001b[38;5;241m.\u001b[39mitems())\n\u001b[1;32m     43\u001b[0m d_tv_show \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(tv_show_network\u001b[38;5;241m.\u001b[39mdegree)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Network' object has no attribute 'degree'"
+      "Cell \u001b[0;32mIn[57], line 33\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Movie Network\u001b[39;00m\n\u001b[1;32m     32\u001b[0m scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[0;32m---> 33\u001b[0m movie_network \u001b[38;5;241m=\u001b[39m create_network(movies, nt_movie, \u001b[38;5;241m500\u001b[39m)\n\u001b[1;32m     34\u001b[0m tv_show_network \u001b[38;5;241m=\u001b[39m create_network(tv_shows, nt_tv_show, \u001b[38;5;241m500\u001b[39m)\n\u001b[1;32m     35\u001b[0m combine_network \u001b[38;5;241m=\u001b[39m create_network(media, nt_combine, \u001b[38;5;241m500\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[57], line 20\u001b[0m, in \u001b[0;36mcreate_network\u001b[0;34m(df, network, num_nodes)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 w \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m w \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 20\u001b[0m             network\u001b[38;5;241m.\u001b[39madd_weighted_edges_from(df\u001b[38;5;241m.\u001b[39mloc[i, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m], df\u001b[38;5;241m.\u001b[39mloc[j, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m], w\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m network\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Network' object has no attribute 'add_weighted_edges_from'"
      ]
     }
    ],
@@ -151,7 +148,7 @@
     "                if actor in df.loc[j, 'stars']:\n",
     "                    w += 5\n",
     "            if w > 0:\n",
-    "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], w=w)\n",
+    "                network.add_weighted_edges_from(df.loc[i, 'title'], df.loc[j, 'title'], w='weight')\n",
     "    return network\n",
     "\n",
     "movie_network = nx.Graph()\n",
