--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "\n",
     "def get_cleaned_dataframe():\n",
     "    df = pd.read_csv('./n_movies.csv')\n",
-    "    df = df.drop(columns=['description', 'votes', 'certificate'])\n",
+    "    df = df.drop(columns=['description', 'certificate'])\n",
     "    df = df.dropna(subset=['stars', 'duration', 'year', 'genre'])\n",
     "    df = df.drop_duplicates(subset=['title'])\n",
     "\n",
@@ -77,17 +77,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = get_cleaned_dataframe()\n",
     "\n",
-    "actors = []\n",
-    "for index, row in df_top.iterrows():\n",
+    "# Making seperate dataframes for movies, tv shows, and combined\n",
+    "movies = df.where(df['is_tv'] == False).dropna().reset_index(drop=True)\n",
+    "tv_shows = df.where(df['is_tv'] == True).dropna().reset_index(drop=True)\n",
+    "media = df.dropna().reset_index(drop=True)\n",
+    "\n",
+    "# Creating dataframes of the top 500 rows sorted by number of votes\n",
+    "movie_sorted = movies.sort_values(by='votes', ascending=False)\n",
+    "movie_top = movie_sorted.iloc[:500]\n",
+    "\n",
+    "tv_sorted = tv_shows.sort_values(by='votes', ascending=False)\n",
+    "tv_top = tv_sorted.iloc[:500]\n",
+    "\n",
+    "media_sorted = media.sort_values(by='votes', ascending=False)\n",
+    "media_top = media_sorted.iloc[:500]\n",
+    "\n",
+    "# Creating lists of the actors found in the top 500 movies/tv shows/combined media\n",
+    "tv_actors = []\n",
+    "for index, row in tv_top.iterrows():\n",
     "    for star in row['stars']:\n",
-    "        if star not in actors:\n",
-    "            actors.append(star)\n"
+    "        if star not in tv_actors:\n",
+    "            tv_actors.append(star)\n",
+    "\n",
+    "movie_actors = []\n",
+    "for index, row in movie_top.iterrows():\n",
+    "    for star in row['stars']:\n",
+    "        if star not in movie_actors:\n",
+    "            movie_actors.append(star)\n",
+    "\n",
+    "media_actors = []\n",
+    "for index, row in media_top.iterrows():\n",
+    "    for star in row['stars']:\n",
+    "        if star not in media_actors:\n",
+    "            media_actors.append(star)"
    ]
   },
   {
@@ -121,10 +149,6 @@
     "            if w > 0:\n",
     "                network.add_edge(df.loc[i, 'title'], df.loc[j, 'title'], weight=w,)\n",
     "    return network\n",
-    "\n",
-    "movies = df.where(df['is_tv'] == False).dropna().reset_index(drop=True)\n",
-    "tv_shows = df.where(df['is_tv'] == True).dropna().reset_index(drop=True)\n",
-    "media = df.dropna().reset_index(drop=True)\n",
     "\n",
     "# Creating the networks\n",
     "movie_network = nx.MultiGraph()\n",
@@ -179,17 +203,19 @@
     "    # Creating Edges\n",
     "    for i in range(num_nodes):\n",
     "        for j in tqdm(range(len(df))):\n",
-    "            print(df.loc[j, 'stars'])\n",
-    "            print(actors[i])\n",
     "            if actors[i] in df.loc[j, 'stars']:\n",
     "                for actor_2 in df.loc[j, 'stars']:\n",
     "                    print('hello')\n",
     "                    if (actor_2 is not actors[i]) and (actor_2 in actors):\n",
-    "                        network.add_edge(actors[i], actor_2)\n",
+    "                        w=1\n",
+    "                        if (network.has_edge(actors[i], actor_2):\n",
+    "                            w += network\n",
+    "                        else:\n",
+    "                            network.add_edge(actors[i], actor_2)\n",
     "    return network\n",
     "\n",
-    "network = nx.MultiGraph()\n",
-    "network = create_actor_network(actors, df, network, len(actors))\n",
+    "movie_actor_network = nx.MultiGraph()\n",
+    "movie_actor_network = create_actor_network(movie_actors, movies, movie_actor_network, len(movie_actors))\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
     "scale=4\n",
