--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -254,15 +254,10 @@
     "        genre_ratings_df.loc[genre, 'mean'] = np.mean(ratings)\n",
     "        genre_ratings_df.loc[genre, 'std'] = np.std(ratings)\n",
     "\n",
-    "    print(genre_ratings_df)\n",
-    "\n",
-    "    means = []\n",
-    "    stds = []\n",
-    "\n",
     "    plt.figure(figsize=(30, 10))\n",
-    "    plt.bar(x=genre_ratings, height=means)\n",
-    "    plt.errorbar(range(len(genres)), means, yerr=stds, fmt='or')\n",
-    "    plt.xlim(-0.5,len(genres)-.5)\n",
+    "    plt.bar(x=genre_ratings_df.index, height=genre_ratings_df['mean'])\n",
+    "    plt.errorbar(range(len(genre_ratings_df)), genre_ratings_df['mean'], yerr=genre_ratings_df['std'], fmt='or')\n",
+    "    plt.xlim(-0.5,len(genre_ratings_df)-.5)\n",
     "    plt.title(title)\n",
     "    plt.xlabel('genre')\n",
     "    plt.ylabel('rating')\n",
