--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -120,9 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████| 3447/3447 [00:00<00:00, 28672.90it/s]\n",
+      "100%|███████████████████████████████████████| 3447/3447 [01:24<00:00, 40.97it/s]\n",
+      "100%|███████████████████████████████████| 2508/2508 [00:00<00:00, 131688.96it/s]\n",
+      "100%|███████████████████████████████████████| 2508/2508 [00:40<00:00, 62.40it/s]\n",
+      "100%|███████████████████████████████████| 5955/5955 [00:00<00:00, 187765.13it/s]\n",
+      "100%|███████████████████████████████████████| 5955/5955 [03:47<00:00, 26.20it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
@@ -155,9 +168,9 @@
     "tv_show_network = nx.MultiGraph()\n",
     "combine_network = nx.MultiGraph()\n",
     "\n",
-    "movie_network = create_media_network(movies, movie_network, 200)\n",
-    "tv_show_network = create_media_network(tv_shows, tv_show_network, 200)\n",
-    "combine_network = create_media_network(media, combine_network, 200)\n",
+    "movie_network = create_media_network(movies, movie_network, len(movies))\n",
+    "tv_show_network = create_media_network(tv_shows, tv_show_network, len(tv_shows))\n",
+    "combine_network = create_media_network(media, combine_network, len(media))\n",
     "\n",
     "# Scaling the nodes based on their degree\n",
     "scale=4\n",
@@ -174,22 +187,26 @@
     "nx.set_node_attributes(combine_network, d_combine,'size')\n",
     "\n",
     "# Creating the Pyvis Networks\n",
-    "nt_movie = Network(\"500px\", \"500px\")\n",
-    "nt_tv_show = Network(\"800px\", \"800px\")\n",
-    "nt_combine = Network(\"800px\", \"800px\")\n",
+    "nt_movie = Network(\"1000px\", \"1000px\")\n",
+    "nt_tv_show = Network(\"1000px\", \"1000px\")\n",
+    "nt_combine = Network(\"1000px\", \"1000px\")\n",
     "\n",
     "nt_movie.from_nx(movie_network)\n",
     "nt_tv_show.from_nx(tv_show_network)\n",
     "nt_combine.from_nx(combine_network)\n",
     "\n",
-    "nt_movie.show(\"nx_movie.html\", notebook=False)\n",
-    "nt_tv_show.show(\"nx_tv_show.html\", notebook=False)\n",
-    "nt_combine.show(\"nx_combine.html\", notebook=False)"
+    "nt_movie.show_buttons(filter_='physics')\n",
+    "nt_tv_show.show_buttons(filter_='physics')\n",
+    "nt_combine.show_buttons(filter_='physics')\n",
+    "\n",
+    "nt_movie.show(\"nx_movie.html\")\n",
+    "nt_tv_show.show(\"nx_tv_show.html\")\n",
+    "nt_combine.show(\"nx_combine.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,33 +219,61 @@
     "\n",
     "    # Creating Edges\n",
     "    for i in range(num_nodes):\n",
-    "        for j in tqdm(range(len(df))):\n",
+    "        for j in range(len(df)):\n",
     "            if actors[i] in df.loc[j, 'stars']:\n",
     "                for actor_2 in df.loc[j, 'stars']:\n",
-    "                    print('hello')\n",
-    "                    if (actor_2 is not actors[i]) and (actor_2 in actors):\n",
+    "                    if (actor_2 != actors[i]) and (actor_2 in actors):\n",
     "                        w=1\n",
-    "                        if (network.has_edge(actors[i], actor_2):\n",
-    "                            w += network\n",
-    "                        else:\n",
-    "                            network.add_edge(actors[i], actor_2)\n",
+    "                        if (network.has_edge(actors[i], actor_2)):\n",
+    "                            e = network.get_edge_data(actors[i], actor_2)\n",
+    "                            w += e[0][\"weight\"]\n",
+    "                            w += 2\n",
+    "                            network.remove_edge(actors[i], actor_2)\n",
+    "                            \n",
+    "                        network.add_edge(actors[i], actor_2, weight=w)\n",
     "    return network\n",
     "\n",
     "movie_actor_network = nx.MultiGraph()\n",
     "movie_actor_network = create_actor_network(movie_actors, movies, movie_actor_network, len(movie_actors))\n",
     "\n",
+    "tv_actor_network = nx.MultiGraph()\n",
+    "tv_actor_network = create_actor_network(tv_actors, tv_shows, tv_actor_network, len(tv_actors))\n",
+    "\n",
+    "media_actor_network = nx.MultiGraph()\n",
+    "media_actor_network = create_actor_network(media_actors, media, media_actor_network, len(media_actors))\n",
+    "\n",
     "# Scaling the nodes based on their degree\n",
     "scale=4\n",
-    "d_actor = dict(network.degree)\n",
-    "d_actor.update((x, scale*y) for x, y in d_actor.items())\n",
+    "d_movie_actor = dict(movie_actor_network.degree)\n",
+    "d_movie_actor.update((x, scale*y) for x, y in d_movie_actor.items())\n",
+    "\n",
+    "d_tv_actor = dict(tv_actor_network.degree)\n",
+    "d_tv_actor.update((x, scale*y) for x, y in d_tv_actor.items())\n",
+    "\n",
+    "d_media_actor = dict(media_actor_network.degree)\n",
+    "d_media_actor.update((x, scale*y) for x, y in d_media_actor.items())\n",
     "\n",
     "# Setting up size attribute\n",
-    "nx.set_node_attributes(network, d_actor,'size')\n",
+    "nx.set_node_attributes(movie_actor_network, d_movie_actor,'size')\n",
+    "nx.set_node_attributes(tv_actor_network, d_tv_actor,'size')\n",
     "\n",
-    "nt_actor = Network(\"500px\", \"500px\")\n",
-    "nt_actor.from_nx(network)\n",
-    "nt_actor.show_buttons(filter_='physics')\n",
-    "nt_actor.show(\"nx_actor.html\")"
+    "nx.set_node_attributes(media_actor_network, d_media_actor,'size')\n",
+    "nx.set_node_attributes(media_actor_network, d_media_actor,'size')\n",
+    "# Converting to Pyvis Network\n",
+    "nt_movie_actor = Network(\"1000px\", \"1000px\")\n",
+    "nt_movie_actor.from_nx(movie_actor_network)\n",
+    "nt_movie_actor.show_buttons(filter_='physics')\n",
+    "nt_movie_actor.show(\"nx_movie_actor.html\")\n",
+    "\n",
+    "nt_tv_actor = Network(\"1000px\", \"1000px\")\n",
+    "nt_tv_actor.from_nx(tv_actor_network)\n",
+    "nt_tv_actor.show_buttons(filter_='physics')\n",
+    "nt_tv_actor.show(\"nx_tv_actor.html\")\n",
+    "\n",
+    "nt_media_actor = Network(\"1000px\", \"1000px\")\n",
+    "nt_media_actor.from_nx(media_actor_network)\n",
+    "nt_media_actor.show_buttons(filter_='physics')\n",
+    "nt_media_actor.show(\"nx_media_actor.html\")"
    ]
   },
   {
