--- a/movie-analysis.ipynb
+++ b/movie-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_stars(stars):\n",
     "    stars = stars.split(', \\'')\n",
-    "    stars = [star for star in stars if star != '' and star != '    Stars:\\'']\n",
+    "    stars = [star for star in stars if star != '' and ':\\'' not in star]\n",
     "    stars[0] = stars[0][2:]\n",
     "    stars[-1] = stars[-1][:-2]\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
